- UPDATED: the themes to those of master - ADD: nmessage-own background color to the base.css file - All lighter themes use the same 'default' colour for own messages - Darker themes have had this added in

--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -1247,6 +1247,10 @@
     color: #fff;
 }
 
+.kiwi-messagelist-message--own {
+    background-color: #3dc37829;
+}
+
 @media screen and (max-width: 769px) {
     .kiwi-appsettings {
         background-color: #294234;
