--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -143,6 +143,10 @@ button.u-button.u-button-primary.u-submit.kiwi-welcome-znc-start,
     border-top-color: #2d2d2d;
 }
 
+.kiwi-messagelist-message--own {
+    background-color: #2d2d2d;
+}
+
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
 .irc-fg-colour-black { color: #000; }
