NEW: - background on self messages (#811)
* - REMOVE: Remove the settings icons from the statebrowser channel list. It's more of an annoyence than a useful feature.

* - Remove: unused css

* NEW: All themes now contain styling for 'message--own' meaning all the users own messages will be ever so slightly highlighted in the messagelist

* RESTORE: component StateBrowserNetwork should not have been pushed in this PR. I have returned it to it's original state in this commit.

* - UPDATED: the themes to those of master
- ADD: nmessage-own background color to the base.css file
- All lighter themes use the same 'default' colour for own messages
- Darker themes have had this added in

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -933,6 +933,10 @@
     color: var(--brand-default-fg);
 }
 
+.kiwi-messagelist-message--own {
+    background-color: #f7f7f7;
+}
+
 /* ---- MessageInfo ---- */
 .kiwi-messagelist-message--info-open {
     background-color: var(--brand-midtone);
