- New style to the AutoComplete - Added colums (2) on table and (1) on mobile - Better position of the autoComplete component

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -216,9 +216,15 @@
 
 /* ---- Auto complete ( autoComplete ) ---- */
 .kiwi-autocomplete {
-    border-top: 1px solid var(--brand-midtone);
-    border-bottom: 1px solid var(--brand-midtone);
+    border: 1px solid var(--comp-border);
+    border-bottom: none;
     background: var(--brand-default-bg);
+}
+
+.kiwi-autocomplete-mobile {
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid var(--comp-border);
 }
 
 .kiwi-autocomplete-item {
