Elite theme update (#868)
* - Made sure the disconnected bar will always use the 'Brand Error' theme colour variable

* - Made sidebar look cool(er)
- Made messagelist hover / unread more subtle
- Made /notice messages the Elite Dangerous blue colour
- Made the tabbed content a slightly lighter shade of blue, so its less contrasting with the statebrowser

* - Add ELITE theme to the core config file
- Fixed channel list themeing on the Elite theme
- Fixed Dark theme channel filters colours
- Fixed Nightswatch theme channel filters colours ( removed bottom border from button )

* Update config.json

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -638,6 +638,10 @@
     background: var(--brand-primary);
 }
 
+.kiwi-workspace::after {
+    background: var(--brand-error);
+}
+
 /* ---- Container ( Container.vue )  ---- */
 .kiwi-container-toggledraw-statebrowser,
 .kiwi-container-toggledraw-sidebar {
