--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -143,6 +143,9 @@ button.u-button.u-button-primary.u-submit.kiwi-welcome-znc-start,
     border-top-color: #2d2d2d;
 }
 
+.kiwi-channellist table tbody tr:nth-child(even) {
+    background-color: #333333;
+}
 .kiwi-messagelist-message--own {
     background-color: #2d2d2d;
 }
