- Dark theme: make titles on app settings #fff for consistency

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -52,7 +52,7 @@
 }
 .kiwi-appsettings-title,
 .kiwi-appsettings-block h3 {
-    color: var(--brand-default-fg);
+    color: #fff;
 }
 .u-tabbed-view-tabs {
     background: #696969;
