- time is now visible on the nightwatch theme join messages

--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -313,6 +313,10 @@ button.u-button.u-button-primary.u-submit.kiwi-welcome-znc-start,
     color: #fdfdfd;
 }
 
+.kiwi-messagelist-message--compact .kiwi-messagelist-time {
+    color: #fff;
+}
+
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
 .irc-fg-colour-black { color: #000; }
