- Added the 'scrollbar' styling to the messageList component - Removed the styling from the component, over to themes ( but only put in base.css) - Removed box shadow and bevel from the scrollbar background - Styled the 'thumb' for the scrollbar
need to test on Internet Explorer.

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -791,6 +791,10 @@
 }
 
 /* ---- Message list - ( MessageList.vue ) ---- */
+.kiwi-messagelist::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e;
+}
+
 .kiwi-messagelist-message--info-open,
 .kiwi-messagelist-message--authorrepeat.kiwi-messagelist-message--info-open {
     background: var(--brand-midtone);
