--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -1252,3 +1252,7 @@
         background-color: #294234;
     }
 }
+
+.kiwi-messagelist::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e;
+}
