Connected / Disconnected restyling (#892)
* - Make messageListModern connection messages opacity 1

* - Remove styling of disconnected/connected messages in message list
- Mobile styling of the notConnected component
- Remove ICON from the translations for 'connected' / 'disconnected'
- Remove embedded colours in the modernMessagelist layout - should not be there

* - Add the refresh icon to the 'connecting' stage of the Not Connected Component

* - Styled the disconnected / connected messages on the traditional layout

* - Styled the connection messages for the inline message layout

* - Added styling to the not connected on Tablet view

* - Change the border of the settings button to be 1px instead of 2px.

* - Please see notes on the PR

* - Move notConnected component into the container & Remove from messageList
- Ensure the notConnected component does not show on the server buffer

* - Reposition: Absolute, remove unused server buffer styling

* Bringing NotConnected component back into DOM flow

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -846,16 +846,6 @@
     background-color: var(--brand-default-bg);
 }
 
-.kiwi-messagelist-message.kiwi-messagelist-message-connection-connected {
-    background-color: var(--brand-primary);
-    color: var(--brand-default-bg);
-}
-
-.kiwi-messagelist-message.kiwi-messagelist-message-connection-disconnected {
-    background-color: var(--brand-error);
-    color: var(--brand-default-bg);
-}
-
 /* ---- Traffic Messages ---- */
 .kiwi-messagelist-message-traffic-join {
     color: var(--brand-primary);
@@ -980,6 +970,10 @@
     background-color: var(--brand-error);
 }
 
+.kiwi-warning-block.connecting {
+    background-color: var(--brand-primary);
+}
+
 .kiwi-notconnected-button {
     border-color: var(--brand-default-bg);
     color: var(--brand-default-bg);
@@ -988,6 +982,11 @@
 .kiwi-notconnected-button:hover {
     background-color: var(--brand-default-bg);
     color: var(--brand-default-fg);
+}
+
+.kiwi-notconnected-button-settings:hover {
+    background-color: transparent;
+    color: var(--brand-default-bg);
 }
 
 /* ---- Settings Aliases ( SettingsAliases ) ---- */
