- Toned down the green colour

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -1060,7 +1060,7 @@
 .irc-fg-colour-white { color: #fff; }
 .irc-fg-colour-black { color: #000; }
 .irc-fg-colour-blue { color: #2e2eff; }
-.irc-fg-colour-green { color: #02b302; }
+.irc-fg-colour-green { color: #16ca16; }
 .irc-fg-colour-light-red { color: #ff5959; }
 .irc-fg-colour-brown { color: #743a00; }
 .irc-fg-colour-purple { color: #a500ff; }
