- Dark theme increase default-fg colour to pure white, for contrast

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -6,7 +6,7 @@
     --brand-midtone: #f1f1f1;
     --brand-darktone: #969696;
     --brand-default-bg: #1e1e1e;
-    --brand-default-fg: #e2e2e2;
+    --brand-default-fg: #fff;
     --brand-notice: #f6c358;
     --brand-warning: #fcb46e;
     --brand-error: #bf5155;
