- Coffee: Make configure network link legible - Dark:  Server connect button is pure white - Grayfox: Make configure network link legible

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -107,6 +107,9 @@
     color: #fff;
 }
 
+.kiwi-statebrowser-network-status {
+    background: rgba(0, 0, 0, 0.24);
+}
 
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
