- Grayfox: make brand primary a slightly darker to improve contrast

--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -2,7 +2,7 @@
 
 :root {
     /* Primary Variables */
-    --brand-primary: #747c88;
+    --brand-primary: #454e5a;
     --brand-primary-hover: #9098a2;
     --brand-midtone: #f1f1f1;
     --brand-darktone: #969696;
