- Nightwatch: Make sidebar's text white, titles previously unreadable

--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -317,6 +317,7 @@ button.u-button.u-button-primary.u-submit.kiwi-welcome-znc-start,
     color: #fdfdfd;
 }
 
+.kiwi-sidebar-options,
 .kiwi-messagelist-message--compact .kiwi-messagelist-time {
     color: #fff;
 }
