- Osprey: Colour the channel settings and leave background to be more visible

--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -84,6 +84,11 @@
     color: var(--brand-default-bg);
 }
 
+.kiwi-statebrowser-channel-settings,
+.kiwi-statebrowser-channel-leave {
+    background-color: #2c3843;
+}
+
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
 .irc-fg-colour-black { color: #000; }
