--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -89,6 +89,10 @@
     background-color: #2c3843;
 }
 
+.kiwi-statebrowser-network .kiwi-statebrowser-network-header {
+    background-color: #4e5c6b;
+}
+
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
 .irc-fg-colour-black { color: #000; }
