- Error message support - Move block slightly to the left

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -818,6 +818,7 @@
     border-left: 5px solid var(--brand-primary);
 }
 
+.kiwi-messagelist-message-error .kiwi-messagelist-body,
 .kiwi-messagelist-message--highlight .kiwi-messagelist-body,
 .kiwi-messagelist-message.kiwi-messagelist-message-notice .kiwi-messagelist-body {
     background-color: #f9f9f9;
