- Adds an orange border left to all the themes for the notice messages ( All notices )

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -813,6 +813,12 @@
     border-color: var(--brand-primary);
 }
 
+/* Notice Message styling */
+.kiwi-messagelist-message-notice {
+    border-left-color: var(--brand-notice--standard);
+}
+
+
 /* Standard username and usertime styling */
 .kiwi-messagelist-nick {
     color: var(--brand-default-fg);
