--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -815,9 +815,8 @@
 
 /* Notice Message styling */
 .kiwi-messagelist-message-notice {
-    border-left-color: var(--brand-notice--standard);
+    border-left-color: #ffb314;
 }
-
 
 /* Standard username and usertime styling */
 .kiwi-messagelist-nick {
