Add border left orange to all themes for notice messages (#938)
* - Adds an orange border left to all the themes for the notice messages ( All notices )

* - Removed notice variables from theme files
- Declared static colour for the notice: border left in the base theme file

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -813,6 +813,11 @@
     border-color: var(--brand-primary);
 }
 
+/* Notice Message styling */
+.kiwi-messagelist-message-notice {
+    border-left-color: #ffb314;
+}
+
 /* Standard username and usertime styling */
 .kiwi-messagelist-nick {
     color: var(--brand-default-fg);
