IRCv3 @+draft/typing implementation (#873)
* @+draft/typing implementation

* Add per buffer setting to share typing state. Use Date.now instead of performance.now

* Use native irc-framework tagmsg

* Add typing-status-indicator component

* Extracted IRC typing spec into its own middleware; Dom refactor and linting;

* Dont show self in typing users list. Fix timeouts on typing paused.

* Add locale strings for typing setting

* Fix eslint issue

* More eslint clean up

* move typing user list in dom

* - Started working on making the scrollbar changes that @prawnsalad has requested

* - Added the 'scrollbar' styling to the messageList component
- Removed the styling from the component, over to themes ( but only put in base.css)
- Removed box shadow and bevel from the scrollbar background
- Styled the 'thumb' for the scrollbar

need to test on Internet Explorer.

* HOTFIX: Firefox, sadly bevels/ rounding on the 'thumb' do not appear to be supported

* Scrollbar thickness tweaks

* Delete app.en-US.po

* Revert "Delete app.en-US.po"

This reverts commit 3c1e3c7381c80a2d395f127482988b2e39c127aa.

* Remove en-US translation

--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -1264,3 +1264,7 @@
         background-color: #294234;
     }
 }
+
+.kiwi-messagelist::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e;
+}
