--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -791,6 +791,14 @@
 }
 
 /* ---- Message list - ( MessageList.vue ) ---- */
+.kiwi-messagelist {
+    scrollbar-color: #9e9e9e transparent;
+}
+
+.kiwi-messagelist::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e;
+}
+
 .kiwi-messagelist-seperator {
     border-top: 1px solid var(--brand-shadow);
 }
