- Add border to modern messageList avatar - Add variable text colour to modern messageList avatar - Remove colour from messageListAvatar -> Moved over to themes

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -876,7 +876,8 @@
 }
 
 /* ---- Modern Layout Styling ---- */
-.kiwi-messagelist-modern-avatar {
+.kiwi-messagelist-avatar {
+    color: var(--brand-default-bg);
     border-color: var(--brand-primary);
 }
 
