- Added support for dark themes

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -129,6 +129,10 @@ button.u-button.u-button-primary.u-submit.kiwi-welcome-znc-start,
     color: #fff;
 }
 
+.kiwi-messagelist-avatar {
+    color: var(--brand-default-fg);
+}
+
 .kiwi-messagelist-seperator {
     border-top: 2px dashed #00b100;
 }
