- Updated base with variables for the notice label - Mobile changes for the leave / notice labels

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -107,6 +107,10 @@
     color: #fff;
 }
 
+.kiwi-statebrowser-channel-label {
+    background: #967f70;
+}
+
 
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
