Stop buffer close icon overlapping labels on hover (#937)
* - When user hovers over the channel in statebrowser, hide the labels
- Change the width of the leave icon to a small value, to make the transition more seamless.

* - Channel labels now moved to the left of the leave channel icon on mobile, looks much better now

* - Reworked the hover state of the statebrowser channel
- Removed the background of the messageCount in the statebrowser
- Tweaked sizes of the labels and leave on the mobile view

* Remove transition right from stateBrowserNetwork

* - Updated base with variables for the notice label
- Mobile changes for the leave / notice labels

* - When hovering over the channel name on small screens, we now display the notification label ( incase of an embedded version of Kiwi is running )

* - Remove unneeded CSS selectors from StateBrowserNetwork styling

--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -285,6 +285,10 @@ button.u-button.u-button-primary.u-submit.kiwi-welcome-znc-start,
     color: var(--brand-default-fg);
 }
 
+.kiwi-statebrowser-channel-label {
+    background: #383838;
+}
+
 .kiwi-welcome-znc h2,
 .kiwi-welcome-znc-form .u-input-text-label {
     color: var(--brand-default-bg);
