--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -181,7 +181,7 @@ button.u-button.u-button-primary.u-submit.kiwi-welcome-znc-start,
     background-color: transparent;
 }
 
-/* IRS COLOURS */
+/* IRC COLOURS */
 .irc-bg-colour-blue {
     background-color: #0c0cb5bf;
 }
